Update package.json to use absolute path for electron-game-util

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^2.0.4",
-    "electron-game-util": "file:../electron-game-util"
+    "electron-game-util": "file:///D:/Programming/games/electron-game-util"
   }
 }
